[package]
name = "filedata"
version = "0.0.1"
authors = ["mrinfmag <mrinfmag@gmail.com>"]
edition = "2018"
description = "File and Metadata Wrapper"
repository = "https://github.com/mrinfmag/file-data"
license = "MIT"
#keywords = ["hash", "sha", "sha256", "sha384", "sha512"]
#categories = ["cryptography"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
